--- a/package.json
+++ b/package.json
@@ -8,9 +8,19 @@
   "private": true,
   "devDependencies": {
     "shaderity-loader": "^0.0.15",
-    "typescript": "^4.3.5"
+    "ts-loader": "^9.2.4",
+    "typescript": "^4.3.5",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "shaderity": "^0.1.28"
+  },
+  "scripts": {
+    "build": "npm run build-esm && npm run build-umd-dev && npm run build-umd-prod",
+    "build-umd-dev": "npx webpack --config ./config/webpack/webpack.config.development.js",
+    "build-umd-prod": "npx webpack --config ./config/webpack/webpack.config.production.js",
+    "build-esm": "npx webpack --config ./config/webpack/webpack.config.common_module.js"
   }
 }
