--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@types/node": "^14.11.2",
+    "express": "^4.17.1",
     "gts": "^3.1.0",
     "husky": "^7.0.1",
     "shaderity-loader": "^0.0.15",
     "ts-loader": "^9.2.4",
+    "tsc-watch": "^4.4.0",
     "typescript": "^4.3.5",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2",
-    "webpack-merge": "^5.8.0",
-    "@types/node": "^14.11.2"
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "shaderity": "^0.1.28"
@@ -28,6 +30,7 @@
     "build-umd-dev": "npx webpack --config ./config/webpack/webpack.config.development.js",
     "build-umd-prod": "npx webpack --config ./config/webpack/webpack.config.production.js",
     "build-esm": "npx webpack --config ./config/webpack/webpack.config.common_module.js",
+    "watch-samples": "tsc-watch -p ./samples/ --onSuccess \"node server.js\"",
     "gts-lint": "gts lint ./src",
     "gts-clean": "gts clean ./src",
     "gts-fix": "gts fix ./src"
