--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.17.1",
     "gts": "^3.1.0",
     "husky": "^7.0.1",
+    "loader-utils": "^2.0.0",
     "requirejs": "^2.3.6",
     "shaderity-loader": "^0.0.15",
     "ts-loader": "^9.2.4",
